# techproghomework

.github/workflows/: task5.yml
task0/: README.md
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp
task3/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp
task5/: CMakeLists.txt
